--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <script>
   window.$docsify = {
     name: 'lost-found.gr Wiki',
-    repo: 'https://github.com/yourusername/chromium-v94-safety-wiki',
+    repo: 'https://github.com/lost-found-gr/WIKI/',
     loadSidebar: true,
     loadHeader: true,      // ← this enables _header.md
     homepage: 'HOME.md',
